methods.picture.PatternPicture.scala.error
Erreur de compilation :
PatternPicture:4: error: value faireV is not a member of Unit
def faireMotif() {faireV(Color.RED);faireV(Color.BLUE);recule();recule();gauche();avance();avance();droite();faireV(Color.YELLOW);avance()faireV(Color.GREEN) }
                                                                                                                                          ^